// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`table > renders with empty correctly 1`] = `
"<div data-slot="root" class="relative overflow-auto outline-primary/25 focus-visible:outline-3">
  <table data-slot="base" class="min-w-full overflow-clip">
    <!--v-if-->
    <thead data-slot="thead" class="relative">
      <tr data-slot="tr" class="data-[selected=true]:bg-background-elevated/50"></tr>
      <tr data-slot="separator" class="absolute z-1 start-0 w-full h-px bg-(--ui-border-accented)"></tr>
    </thead>
    <tbody data-slot="tbody" class="isolate [&amp;>tr]:data-[selectable=true]:hover:bg-background-elevated/50 [&amp;>tr]:data-[selectable=true]:outline-primary/25 [&amp;>tr]:data-[selectable=true]:focus-visible:outline-3 [&amp;>tr]:data-[selectable=true]:-outline-offset-3 divide-y divide-divide">
      <tr>
        <td colspan="0" data-slot="empty" class="py-6 text-center text-sm color-text-muted">There is no data</td>
      </tr>
    </tbody>
    <!--v-if-->
  </table>
</div>"
`;

exports[`table > renders with empty slot correctly 1`] = `
"<div data-slot="root" class="relative overflow-auto outline-primary/25 focus-visible:outline-3">
  <table data-slot="base" class="min-w-full overflow-clip">
    <!--v-if-->
    <thead data-slot="thead" class="relative">
      <tr data-slot="tr" class="data-[selected=true]:bg-background-elevated/50">
        <th data-pinned="false" scope="col" data-slot="th" class="px-4 py-3.5 text-sm color-text-highlighted text-start font-600 [&amp;:has([role=checkbox])]:pe-0">
          <div data-slot="root" class="relative flex items-start flex-row">
            <div data-slot="container" class="flex items-center h-5"><button data-slot="base" class="rounded-sm ring ring-inset ring-ring-accented overflow-hidden focus-visible:outline-none size-4 outline-primary/25 focus-visible:outline-solid focus-visible:outline-3 focus-visible:ring-primary" id="v-0-0-0" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked">
                <!---->
              </button>
              <!--v-if-->
            </div>
            <div data-slot="wrapper" class="w-full ms-2 text-sm">
              <!--v-if--><label for="v-0-0-0" data-slot="label" class="block font-500 color-text">Select all</label>
              <!--v-if-->
            </div>
          </div>
        </th>
        <th data-pinned="false" scope="col" data-slot="th" class="px-4 py-3.5 text-sm color-text-highlighted text-start font-600 [&amp;:has([role=checkbox])]:pe-0">#</th>
        <th data-pinned="false" scope="col" data-slot="th" class="px-4 py-3.5 text-sm color-text-highlighted text-start font-600 [&amp;:has([role=checkbox])]:pe-0">Date</th>
        <th data-pinned="false" scope="col" data-slot="th" class="px-4 py-3.5 text-sm color-text-highlighted text-start font-600 [&amp;:has([role=checkbox])]:pe-0">Status</th>
        <th data-pinned="false" scope="col" data-slot="th" class="px-4 py-3.5 text-sm color-text-highlighted text-start font-600 [&amp;:has([role=checkbox])]:pe-0"><button type="button" data-slot="base" class="rounded-md font-500 inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 color-text hover:bg-background-elevated active:bg-background-elevated outline-outline-inverted/25 focus-visible:outline-3 hover:disabled:bg-transparent dark:hover:disabled:bg-transparent hover:aria-disabled:bg-transparent dark:hover:aria-disabled:bg-transparent -mx-2.5"><span class="iconify i-lucide:arrow-up-down shrink-0 size-5" aria-hidden="true" data-slot="leadingIcon"></span><span data-slot="label" class="truncate">Email</span>
            <!--v-if-->
          </button></th>
        <th data-pinned="false" scope="col" data-slot="th" class="px-4 py-3.5 text-sm color-text-highlighted text-start font-600 [&amp;:has([role=checkbox])]:pe-0 text-right">Amount</th>
        <th data-pinned="false" scope="col" data-slot="th" class="px-4 py-3.5 text-sm color-text-highlighted text-start font-600 [&amp;:has([role=checkbox])]:pe-0">
          <!---->
        </th>
      </tr>
      <tr data-slot="separator" class="absolute z-1 start-0 w-full h-px bg-(--ui-border-accented)"></tr>
    </thead>
    <tbody data-slot="tbody" class="isolate [&amp;>tr]:data-[selectable=true]:hover:bg-background-elevated/50 [&amp;>tr]:data-[selectable=true]:outline-primary/25 [&amp;>tr]:data-[selectable=true]:focus-visible:outline-3 [&amp;>tr]:data-[selectable=true]:-outline-offset-3 divide-y divide-divide">
      <tr>
        <td colspan="7" data-slot="empty" class="py-6 text-center text-sm color-text-muted">Empty slot</td>
      </tr>
    </tbody>
    <tfoot data-slot="tfoot" class="relative">
      <tr data-slot="separator" class="absolute z-1 start-0 w-full h-px bg-(--ui-border-accented)"></tr>
      <tr data-slot="tr" class="data-[selected=true]:bg-background-elevated/50">
        <th data-pinned="false" data-slot="th" class="px-4 py-3.5 text-sm color-text-highlighted text-start font-600 [&amp;:has([role=checkbox])]:pe-0">
          <!---->
        </th>
        <th data-pinned="false" data-slot="th" class="px-4 py-3.5 text-sm color-text-highlighted text-start font-600 [&amp;:has([role=checkbox])]:pe-0">
          <!---->
        </th>
        <th data-pinned="false" data-slot="th" class="px-4 py-3.5 text-sm color-text-highlighted text-start font-600 [&amp;:has([role=checkbox])]:pe-0">
          <!---->
        </th>
        <th data-pinned="false" data-slot="th" class="px-4 py-3.5 text-sm color-text-highlighted text-start font-600 [&amp;:has([role=checkbox])]:pe-0">
          <!---->
        </th>
        <th data-pinned="false" data-slot="th" class="px-4 py-3.5 text-sm color-text-highlighted text-start font-600 [&amp;:has([role=checkbox])]:pe-0">
          <!---->
        </th>
        <th data-pinned="false" data-slot="th" class="px-4 py-3.5 text-sm color-text-highlighted text-start font-600 [&amp;:has([role=checkbox])]:pe-0 text-right">Total: €0.00</th>
        <th data-pinned="false" data-slot="th" class="px-4 py-3.5 text-sm color-text-highlighted text-start font-600 [&amp;:has([role=checkbox])]:pe-0">
          <!---->
        </th>
      </tr>
    </tfoot>
  </table>
</div>"
`;

exports[`table > renders with loading slot correctly 1`] = `
"<div data-slot="root" class="relative overflow-auto outline-primary/25 focus-visible:outline-3">
  <table data-slot="base" class="min-w-full overflow-clip">
    <!--v-if-->
    <thead data-slot="thead" class="relative after:absolute after:z-1 after:h-px motion-reduce:after:inset-x-0 motion-reduce:after:animate-pulse after:bg-primary motion-safe:after:animate-[carousel_2s_linear_infinite] motion-safe:rtl:after:animate-[carousel-rtl_2s_linear_infinite]">
      <tr data-slot="tr" class="data-[selected=true]:bg-background-elevated/50">
        <th data-pinned="false" scope="col" data-slot="th" class="px-4 py-3.5 text-sm color-text-highlighted text-start font-600 [&amp;:has([role=checkbox])]:pe-0">
          <div data-slot="root" class="relative flex items-start flex-row">
            <div data-slot="container" class="flex items-center h-5"><button data-slot="base" class="rounded-sm ring ring-inset ring-ring-accented overflow-hidden focus-visible:outline-none size-4 outline-primary/25 focus-visible:outline-solid focus-visible:outline-3 focus-visible:ring-primary" id="v-0-0-0" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked">
                <!---->
              </button>
              <!--v-if-->
            </div>
            <div data-slot="wrapper" class="w-full ms-2 text-sm">
              <!--v-if--><label for="v-0-0-0" data-slot="label" class="block font-500 color-text">Select all</label>
              <!--v-if-->
            </div>
          </div>
        </th>
        <th data-pinned="false" scope="col" data-slot="th" class="px-4 py-3.5 text-sm color-text-highlighted text-start font-600 [&amp;:has([role=checkbox])]:pe-0">#</th>
        <th data-pinned="false" scope="col" data-slot="th" class="px-4 py-3.5 text-sm color-text-highlighted text-start font-600 [&amp;:has([role=checkbox])]:pe-0">Date</th>
        <th data-pinned="false" scope="col" data-slot="th" class="px-4 py-3.5 text-sm color-text-highlighted text-start font-600 [&amp;:has([role=checkbox])]:pe-0">Status</th>
        <th data-pinned="false" scope="col" data-slot="th" class="px-4 py-3.5 text-sm color-text-highlighted text-start font-600 [&amp;:has([role=checkbox])]:pe-0"><button type="button" data-slot="base" class="rounded-md font-500 inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 color-text hover:bg-background-elevated active:bg-background-elevated outline-outline-inverted/25 focus-visible:outline-3 hover:disabled:bg-transparent dark:hover:disabled:bg-transparent hover:aria-disabled:bg-transparent dark:hover:aria-disabled:bg-transparent -mx-2.5"><span class="iconify i-lucide:arrow-up-down shrink-0 size-5" aria-hidden="true" data-slot="leadingIcon"></span><span data-slot="label" class="truncate">Email</span>
            <!--v-if-->
          </button></th>
        <th data-pinned="false" scope="col" data-slot="th" class="px-4 py-3.5 text-sm color-text-highlighted text-start font-600 [&amp;:has([role=checkbox])]:pe-0 text-right">Amount</th>
        <th data-pinned="false" scope="col" data-slot="th" class="px-4 py-3.5 text-sm color-text-highlighted text-start font-600 [&amp;:has([role=checkbox])]:pe-0">
          <!---->
        </th>
      </tr>
      <tr data-slot="separator" class="absolute z-1 start-0 w-full h-px bg-(--ui-border-accented)"></tr>
    </thead>
    <tbody data-slot="tbody" class="isolate [&amp;>tr]:data-[selectable=true]:hover:bg-background-elevated/50 [&amp;>tr]:data-[selectable=true]:outline-primary/25 [&amp;>tr]:data-[selectable=true]:focus-visible:outline-3 [&amp;>tr]:data-[selectable=true]:-outline-offset-3 divide-y divide-divide">
      <tr>
        <td colspan="7" data-slot="loading" class="py-6 text-center">Loading slot</td>
      </tr>
    </tbody>
    <tfoot data-slot="tfoot" class="relative">
      <tr data-slot="separator" class="absolute z-1 start-0 w-full h-px bg-(--ui-border-accented)"></tr>
      <tr data-slot="tr" class="data-[selected=true]:bg-background-elevated/50">
        <th data-pinned="false" data-slot="th" class="px-4 py-3.5 text-sm color-text-highlighted text-start font-600 [&amp;:has([role=checkbox])]:pe-0">
          <!---->
        </th>
        <th data-pinned="false" data-slot="th" class="px-4 py-3.5 text-sm color-text-highlighted text-start font-600 [&amp;:has([role=checkbox])]:pe-0">
          <!---->
        </th>
        <th data-pinned="false" data-slot="th" class="px-4 py-3.5 text-sm color-text-highlighted text-start font-600 [&amp;:has([role=checkbox])]:pe-0">
          <!---->
        </th>
        <th data-pinned="false" data-slot="th" class="px-4 py-3.5 text-sm color-text-highlighted text-start font-600 [&amp;:has([role=checkbox])]:pe-0">
          <!---->
        </th>
        <th data-pinned="false" data-slot="th" class="px-4 py-3.5 text-sm color-text-highlighted text-start font-600 [&amp;:has([role=checkbox])]:pe-0">
          <!---->
        </th>
        <th data-pinned="false" data-slot="th" class="px-4 py-3.5 text-sm color-text-highlighted text-start font-600 [&amp;:has([role=checkbox])]:pe-0 text-right">Total: €0.00</th>
        <th data-pinned="false" data-slot="th" class="px-4 py-3.5 text-sm color-text-highlighted text-start font-600 [&amp;:has([role=checkbox])]:pe-0">
          <!---->
        </th>
      </tr>
    </tfoot>
  </table>
</div>"
`;

exports[`table > renders with row pinning and virtualization correctly 1`] = `
"<div data-slot="root" class="relative overflow-auto outline-primary/25 focus-visible:outline-3">
  <table data-slot="base" class="min-w-full overflow-clip">
    <!--v-if-->
    <thead data-slot="thead" class="relative">
      <tr data-slot="tr" class="data-[selected=true]:bg-background-elevated/50">
        <th data-pinned="false" scope="col" data-slot="th" class="px-4 py-3.5 text-sm color-text-highlighted text-start font-600 [&amp;:has([role=checkbox])]:pe-0">Id</th>
        <th data-pinned="false" scope="col" data-slot="th" class="px-4 py-3.5 text-sm color-text-highlighted text-start font-600 [&amp;:has([role=checkbox])]:pe-0">Amount</th>
        <th data-pinned="false" scope="col" data-slot="th" class="px-4 py-3.5 text-sm color-text-highlighted text-start font-600 [&amp;:has([role=checkbox])]:pe-0">Status</th>
        <th data-pinned="false" scope="col" data-slot="th" class="px-4 py-3.5 text-sm color-text-highlighted text-start font-600 [&amp;:has([role=checkbox])]:pe-0">Email</th>
      </tr>
      <tr data-slot="separator" class="absolute z-1 start-0 w-full h-px bg-(--ui-border-accented)"></tr>
    </thead>
    <tbody data-slot="tbody" class="isolate [&amp;>tr]:data-[selectable=true]:hover:bg-background-elevated/50 [&amp;>tr]:data-[selectable=true]:outline-primary/25 [&amp;>tr]:data-[selectable=true]:focus-visible:outline-3 [&amp;>tr]:data-[selectable=true]:-outline-offset-3 divide-y divide-divide">
      <!--v-if-->
      <!--v-if-->
    </tbody>
    <!--v-if-->
  </table>
</div>"
`;

exports[`table > renders with virtualize and sticky correctly 1`] = `
"<div data-slot="root" class="relative overflow-auto outline-primary/25 focus-visible:outline-3">
  <table data-slot="base" class="min-w-full overflow-clip">
    <!--v-if-->
    <thead data-slot="thead" class="relative sticky top-0 inset-x-0 bg-background/75 backdrop-blur-sm z-1">
      <tr data-slot="tr" class="data-[selected=true]:bg-background-elevated/50">
        <th data-pinned="false" scope="col" data-slot="th" class="px-4 py-3.5 text-sm color-text-highlighted text-start font-600 [&amp;:has([role=checkbox])]:pe-0">
          <div data-slot="root" class="relative flex items-start flex-row">
            <div data-slot="container" class="flex items-center h-5"><button data-slot="base" class="rounded-sm ring ring-inset ring-ring-accented overflow-hidden focus-visible:outline-none size-4 outline-primary/25 focus-visible:outline-solid focus-visible:outline-3 focus-visible:ring-primary" id="v-0-0-0" role="checkbox" type="button" aria-checked="false" aria-required="false" data-state="unchecked">
                <!---->
              </button>
              <!--v-if-->
            </div>
            <div data-slot="wrapper" class="w-full ms-2 text-sm">
              <!--v-if--><label for="v-0-0-0" data-slot="label" class="block font-500 color-text">Select all</label>
              <!--v-if-->
            </div>
          </div>
        </th>
        <th data-pinned="false" scope="col" data-slot="th" class="px-4 py-3.5 text-sm color-text-highlighted text-start font-600 [&amp;:has([role=checkbox])]:pe-0">#</th>
        <th data-pinned="false" scope="col" data-slot="th" class="px-4 py-3.5 text-sm color-text-highlighted text-start font-600 [&amp;:has([role=checkbox])]:pe-0">Date</th>
        <th data-pinned="false" scope="col" data-slot="th" class="px-4 py-3.5 text-sm color-text-highlighted text-start font-600 [&amp;:has([role=checkbox])]:pe-0">Status</th>
        <th data-pinned="false" scope="col" data-slot="th" class="px-4 py-3.5 text-sm color-text-highlighted text-start font-600 [&amp;:has([role=checkbox])]:pe-0"><button type="button" data-slot="base" class="rounded-md font-500 inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 color-text hover:bg-background-elevated active:bg-background-elevated outline-outline-inverted/25 focus-visible:outline-3 hover:disabled:bg-transparent dark:hover:disabled:bg-transparent hover:aria-disabled:bg-transparent dark:hover:aria-disabled:bg-transparent -mx-2.5"><span class="iconify i-lucide:arrow-up-down shrink-0 size-5" aria-hidden="true" data-slot="leadingIcon"></span><span data-slot="label" class="truncate">Email</span>
            <!--v-if-->
          </button></th>
        <th data-pinned="false" scope="col" data-slot="th" class="px-4 py-3.5 text-sm color-text-highlighted text-start font-600 [&amp;:has([role=checkbox])]:pe-0 text-right">Amount</th>
        <th data-pinned="false" scope="col" data-slot="th" class="px-4 py-3.5 text-sm color-text-highlighted text-start font-600 [&amp;:has([role=checkbox])]:pe-0">
          <!---->
        </th>
      </tr>
      <tr data-slot="separator" class="absolute z-1 start-0 w-full h-px bg-(--ui-border-accented)"></tr>
    </thead>
    <tbody data-slot="tbody" class="isolate [&amp;>tr]:data-[selectable=true]:hover:bg-background-elevated/50 [&amp;>tr]:data-[selectable=true]:outline-primary/25 [&amp;>tr]:data-[selectable=true]:focus-visible:outline-3 [&amp;>tr]:data-[selectable=true]:-outline-offset-3 divide-y divide-divide">
      <!--v-if-->
      <!--v-if-->
    </tbody>
    <tfoot data-slot="tfoot" class="relative sticky bottom-0 inset-x-0 bg-background/75 backdrop-blur-sm z-1">
      <tr data-slot="separator" class="absolute z-1 start-0 w-full h-px bg-(--ui-border-accented)"></tr>
      <tr data-slot="tr" class="data-[selected=true]:bg-background-elevated/50">
        <th data-pinned="false" data-slot="th" class="px-4 py-3.5 text-sm color-text-highlighted text-start font-600 [&amp;:has([role=checkbox])]:pe-0">
          <!---->
        </th>
        <th data-pinned="false" data-slot="th" class="px-4 py-3.5 text-sm color-text-highlighted text-start font-600 [&amp;:has([role=checkbox])]:pe-0">
          <!---->
        </th>
        <th data-pinned="false" data-slot="th" class="px-4 py-3.5 text-sm color-text-highlighted text-start font-600 [&amp;:has([role=checkbox])]:pe-0">
          <!---->
        </th>
        <th data-pinned="false" data-slot="th" class="px-4 py-3.5 text-sm color-text-highlighted text-start font-600 [&amp;:has([role=checkbox])]:pe-0">
          <!---->
        </th>
        <th data-pinned="false" data-slot="th" class="px-4 py-3.5 text-sm color-text-highlighted text-start font-600 [&amp;:has([role=checkbox])]:pe-0">
          <!---->
        </th>
        <th data-pinned="false" data-slot="th" class="px-4 py-3.5 text-sm color-text-highlighted text-start font-600 [&amp;:has([role=checkbox])]:pe-0 text-right">Total: €2,990.00</th>
        <th data-pinned="false" data-slot="th" class="px-4 py-3.5 text-sm color-text-highlighted text-start font-600 [&amp;:has([role=checkbox])]:pe-0">
          <!---->
        </th>
      </tr>
    </tfoot>
  </table>
</div>"
`;

exports[`table > renders with virtualize correctly 1`] = `
"<div data-slot="root" class="relative overflow-auto outline-primary/25 focus-visible:outline-3">
  <table data-slot="base" class="min-w-full overflow-clip">
    <!--v-if-->
    <thead data-slot="thead" class="relative">
      <tr data-slot="tr" class="data-[selected=true]:bg-background-elevated/50">
        <th data-pinned="false" scope="col" data-slot="th" class="px-4 py-3.5 text-sm color-text-highlighted text-start font-600 [&amp;:has([role=checkbox])]:pe-0">Id</th>
        <th data-pinned="false" scope="col" data-slot="th" class="px-4 py-3.5 text-sm color-text-highlighted text-start font-600 [&amp;:has([role=checkbox])]:pe-0">Amount</th>
        <th data-pinned="false" scope="col" data-slot="th" class="px-4 py-3.5 text-sm color-text-highlighted text-start font-600 [&amp;:has([role=checkbox])]:pe-0">Status</th>
        <th data-pinned="false" scope="col" data-slot="th" class="px-4 py-3.5 text-sm color-text-highlighted text-start font-600 [&amp;:has([role=checkbox])]:pe-0">Email</th>
      </tr>
      <tr data-slot="separator" class="absolute z-1 start-0 w-full h-px bg-(--ui-border-accented)"></tr>
    </thead>
    <tbody data-slot="tbody" class="isolate [&amp;>tr]:data-[selectable=true]:hover:bg-background-elevated/50 [&amp;>tr]:data-[selectable=true]:outline-primary/25 [&amp;>tr]:data-[selectable=true]:focus-visible:outline-3 [&amp;>tr]:data-[selectable=true]:-outline-offset-3 divide-y divide-divide">
      <!--v-if-->
      <!--v-if-->
    </tbody>
    <!--v-if-->
  </table>
</div>"
`;

exports[`table > renders with virtualize external scroll element correctly 1`] = `
"<div data-slot="root" class="relative overflow-auto outline-primary/25 focus-visible:outline-3 overflow-visible">
  <table data-slot="base" class="min-w-full overflow-clip">
    <!--v-if-->
    <thead data-slot="thead" class="relative">
      <tr data-slot="tr" class="data-[selected=true]:bg-background-elevated/50">
        <th data-pinned="false" scope="col" data-slot="th" class="px-4 py-3.5 text-sm color-text-highlighted text-start font-600 [&amp;:has([role=checkbox])]:pe-0">Id</th>
        <th data-pinned="false" scope="col" data-slot="th" class="px-4 py-3.5 text-sm color-text-highlighted text-start font-600 [&amp;:has([role=checkbox])]:pe-0">Amount</th>
        <th data-pinned="false" scope="col" data-slot="th" class="px-4 py-3.5 text-sm color-text-highlighted text-start font-600 [&amp;:has([role=checkbox])]:pe-0">Status</th>
        <th data-pinned="false" scope="col" data-slot="th" class="px-4 py-3.5 text-sm color-text-highlighted text-start font-600 [&amp;:has([role=checkbox])]:pe-0">Email</th>
      </tr>
      <tr data-slot="separator" class="absolute z-1 start-0 w-full h-px bg-(--ui-border-accented)"></tr>
    </thead>
    <tbody data-slot="tbody" class="isolate [&amp;>tr]:data-[selectable=true]:hover:bg-background-elevated/50 [&amp;>tr]:data-[selectable=true]:outline-primary/25 [&amp;>tr]:data-[selectable=true]:focus-visible:outline-3 [&amp;>tr]:data-[selectable=true]:-outline-offset-3 divide-y divide-divide">
      <!--v-if-->
      <!--v-if-->
    </tbody>
    <!--v-if-->
  </table>
</div>"
`;

exports[`table > renders without data correctly 1`] = `
"<div data-slot="root" class="relative overflow-auto outline-primary/25 focus-visible:outline-3">
  <table data-slot="base" class="min-w-full overflow-clip">
    <!--v-if-->
    <thead data-slot="thead" class="relative">
      <tr data-slot="tr" class="data-[selected=true]:bg-background-elevated/50"></tr>
      <tr data-slot="separator" class="absolute z-1 start-0 w-full h-px bg-(--ui-border-accented)"></tr>
    </thead>
    <tbody data-slot="tbody" class="isolate [&amp;>tr]:data-[selectable=true]:hover:bg-background-elevated/50 [&amp;>tr]:data-[selectable=true]:outline-primary/25 [&amp;>tr]:data-[selectable=true]:focus-visible:outline-3 [&amp;>tr]:data-[selectable=true]:-outline-offset-3 divide-y divide-divide">
      <tr>
        <td colspan="0" data-slot="empty" class="py-6 text-center text-sm color-text-muted">No data</td>
      </tr>
    </tbody>
    <!--v-if-->
  </table>
</div>"
`;
